Bug 1524573 - Ensure that an auto-sized <input type=range> is at least large enough to contain the thumb.  r=jwatt